--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.3
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
